<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Technician Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_call">Call</string>
    <string name="action_location">Location</string>
    <string name="action_takePhoto">Take Photo</string>
    <string name="action_addJob">Add Serivce Job</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sortBy">Sort By</string>
    <string name="staffNo">Staff No : </string>
    <string name="action_showPhoto">Show Photo</string>
    <string name="newPassword">New Password : </string>
    <string name="oldPassword">Old Password : </string>
    <string name="changePassword">Change Password</string>
    <string name="confirmPassword">Confirm Password : </string>
    <string name="action_sortByJobNo_Asc">Sort By Job No. Asc.</string>
    <string name="action_sortByJobNo_Desc">Sort By Job No. Desc.</string>
    <string name="action_sortByRequestDate_Asc">Sort By Request Date Asc.</string>
    <string name="action_sortByRequestDate_Desc">Sort By Request Date Desc.</string>
    <string name="action_sortByJobStatus_Asc">Sort By JobStatus Date Asc.</string>
    <string name="action_sortByJobStatus_Desc">Sort By JobStatus Date Desc.</string>
    <string name="action_filter">Filter</string>
    <string name="userId">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login System</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="information">Information</string>
    <string name="notification">Notification</string>
    <string name="signature">Signature</string>
    <string name="visitedStatement">The job has been visited on : </string>
    <string name="statusStatement">The job has been record as : </string>
    <string name="jobRecord">Job Record</string>
    <string name="jobRecordUpdate">Job Record Update</string>
    <string name="requested">Requested : </string>
    <string name="requestDate">Request Date : </string>
    <string name="action">Action </string>
    <string name="takePhoto">Take Photo for damaged part </string>
    <string name="visit">Visit : </string>
    <string name="visitDate">Visit Date : </string>
    <string name="jobBackground">Job Background</string>
    <string name="jobNo">Job No : </string>
    <string name="jobProblem">Problem : </string>
    <string name="remark">Remark : </string>
    <string name="jobStartTime">Job Start Time : </string>
    <string name="jobEndTime">Job End Time : </string>
    <string name="productNo">Product No : </string>
    <string name="productName">Product Name : </string>
    <string name="gallery">Gallery</string>
    <string name="companyTel">Company Tel : </string>
    <string name="purchaseDate">Purchase Date:</string>
    <string name="jobStatus">Job Status : </string>
    <string name="updateStatus_t">Last Updated : </string>
    <string name="clientInformation">Client Information</string>
    <string name="companyNo">Company No : </string>
    <string name="contact">Contact</string>
    <string name="submitNSign">Submit And Sign</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="companyName">Company Name : </string>
    <string name="companyAddress">Company Address : </string>
    <string name="purchasedProductInformation">Purchased Product Information</string>
    <string-array name="navItems">
        <item>Menu</item>
        <item>Service Jobs</item>
        <item>Purchased Products</item>
        <item>Product For Chart</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Opening Nav</string>
    <string name="pending">pending</string>
    <string name="cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="drawer_close">Closing Nav</string>
    <string name="serialNo">Serial no :</string>
    <string name="jobDetails">Job Details</string>
</resources>
