<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_takePhoto"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/camera"
        android:title="@string/action_takePhoto"/>
    <item
        android:id="@+id/action_showPhoto"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/gallery"
        android:title="@string/action_showPhoto"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:icon="@drawable/location"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_location"/>

    <item
        android:id="@+id/action_call"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_call"
        android:icon="@drawable/call"/>
</menu>
