<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/staffNo_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/staffNo"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/staffNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/staffNo_t"
        android:layout_alignBottom="@+id/staffNo_t"
        android:layout_alignLeft="@+id/oldPassword"
        android:text="000" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oldPassword"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/oldPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/newPassword_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newPassword"
        android:layout_alignBottom="@+id/newPassword"
        android:layout_alignLeft="@+id/oldPassword_t"
        android:text="@string/newPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPassword"
        android:layout_alignRight="@+id/newPassword"
        android:layout_below="@+id/newPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/staffNo_t"
        android:layout_toRightOf="@+id/confirmPassword_t"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/oldPassword_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/oldPassword"
        android:layout_alignBottom="@+id/oldPassword"
        android:text="@string/oldPassword"
        android:textSize="12sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="80sp"
        android:layout_height="40sp"
        android:layout_alignBaseline="@+id/cancel"
        android:layout_alignBottom="@+id/cancel"
        android:layout_marginLeft="43dp"
        android:layout_toRightOf="@+id/cancel"
        android:text="@string/Submit"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/confirmPassword_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirmPassword"
        android:layout_alignBottom="@+id/confirmPassword"
        android:layout_alignLeft="@+id/newPassword_t"
        android:text="@string/confirmPassword"
        android:textSize="12sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="80sp"
        android:layout_height="40sp"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/staffNo_t"
        android:text="@string/cancel"
        android:textSize="12sp" />

</RelativeLayout>