<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="25dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/jobStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statusStatement"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="Status"
            android:textColor="@color/white"
            android:padding="2dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/visitedStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/statusStatement"
            android:layout_below="@+id/jobStatus"
            android:layout_marginTop="28dp"
            android:text="The job has been visited on : "
            android:textSize="14sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/notification"
            android:background="#DCE0E0" />

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/notification"
            android:textColor="@color/green_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/statusStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/statusStatement"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/visitDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visitedStatement"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Visited Date"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/signature_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature"
            android:textColor="@color/green_blue"
            android:textSize="16sp" />

        <View
            android:id="@+id/View01"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#DCE0E0" />

        <ImageView
            android:padding="10dp"
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>